crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP006_4.py_preview_with_fa100_and_future_annotations_py310.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP006 [*] Use `list` instead of `typing.List` for type annotation
 --> UP006_4.py:5:10
  |
5 | def f(x: typing.List[str]) -> None:
  |          ^^^^^^^^^^^
6 |     ...
help: Replace with `list`
  |
4 |
  - def f(x: typing.List[str]) -> None:
5 + def f(x: list[str]) -> None:
6 |     ...
  |

UP006 [*] Use `list` instead of `List` for type annotation
  --> UP006_4.py:9:10
 9 | def g(x: List[str]) -> None:
   |          ^^^^
10 |     ...
help: Replace with `list`
   |
8  |
   - def g(x: List[str]) -> None:
9  + def g(x: list[str]) -> None:
10 |     ...
   |
